edit auditor dan ganti kalimat

--- a/users/users-auditor.html
+++ b/users/users-auditor.html
@@ -580,7 +580,7 @@
                             class="modal-title fw-500"
                             id="staticBackdropLabel"
                           >
-                            Tambah Data Auditor
+                            Edit Data Auditor
                           </h6>
                           <button
                             type="button"
