add login page and fix some problems

--- a/fakultas/dashboard-fakultas.html
+++ b/fakultas/dashboard-fakultas.html
@@ -1053,7 +1053,7 @@
                 />
               </form>
             </li>
-            <li class="nav-message">
+            <!-- <li class="nav-message">
               <div class="dropdown-custom">
                 <a href="javascript:;" class="nav-item-toggle icon-active">
                   <img class="svg" src="../img/svg/message.svg" alt="img" />
@@ -1199,9 +1199,9 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
             <!-- ends: nav-message -->
-            <li class="nav-notification">
+            <!-- <li class="nav-notification">
               <div class="dropdown-custom">
                 <a href="javascript:;" class="nav-item-toggle icon-active">
                   <img class="svg" src="../img/svg/alarm.svg" alt="img" />
@@ -1355,9 +1355,9 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
             <!-- ends: .nav-notification -->
-            <li class="nav-settings">
+            <!-- <li class="nav-settings">
               <div class="dropdown-custom">
                 <a href="javascript:;" class="nav-item-toggle">
                   <img src="../img/setting.png" alt="setting" />
@@ -1437,9 +1437,9 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
             <!-- ends: .nav-support -->
-            <li class="nav-flag-select">
+            <!-- <li class="nav-flag-select">
               <div class="dropdown-custom">
                 <a href="javascript:;" class="nav-item-toggle"
                   ><img src="../img/flag.png" alt="" class="rounded-circle"
@@ -1454,34 +1454,44 @@
                   </div>
                 </div>
               </div>
-            </li>
+            </li> -->
             <!-- ends: .nav-flag-select -->
             <li id="nav-author" class="nav-author">
               <div class="dropdown-custom">
-                 <a href="javascript:;"  class="nav-item-toggle"><img id="navItemPhoto" src=""  alt="User Photo" class="rounded-circle">
-                    <span class="nav-item__title">Danial<i class="las la-angle-down nav-item__arrow"></i></span>
-                 </a>
-                 <div class="dropdown-parent-wrapper">
-                    <div class="dropdown-wrapper">
-                       <div class="nav-author__info">
-                          <div class="author-img">
-                             <img src="../img/author-nav.jpg" alt="" class="rounded-circle">
-                          </div>
-                          <div>
-                             <h6 class="nav-item_nama">nama_user</h6>
-                             <span class="nav-item_level">nama_level</span>
-                             <br>
-                             <span class="nav_email">email</span>
-
-                          </div>
-                       </div>
-                       <div class="nav-author__options">
-                          <ul>
-                             <li>
-                                <a href="">
-                                   <i class="uil uil-user"></i> Profile</a>
-                             </li>
-                             <li>
+                <a href="javascript:;" class="nav-item-toggle"
+                  ><img
+                    id="navItemPhoto"
+                    src=""
+                    alt="User Photo"
+                    class="rounded-circle"
+                  />
+                  <span class="nav-item__title"
+                    >Danial<i class="las la-angle-down nav-item__arrow"></i
+                  ></span>
+                </a>
+                <div class="dropdown-parent-wrapper">
+                  <div class="dropdown-wrapper">
+                    <div class="nav-author__info">
+                      <div class="author-img">
+                        <img
+                          src="../img/author-nav.jpg"
+                          alt=""
+                          class="rounded-circle"
+                        />
+                      </div>
+                      <div>
+                        <h6 class="nav-item_nama">nama_user</h6>
+                        <span class="nav-item_level">nama_level</span>
+                        <br />
+                        <span class="nav_email">email</span>
+                      </div>
+                    </div>
+                    <div class="nav-author__options">
+                      <ul>
+                        <li>
+                          <a href=""> <i class="uil uil-user"></i> Profile</a>
+                        </li>
+                        <!-- <li>
                                 <a href="">
                                    <i class="uil uil-setting"></i>
                                    Settings</a>
@@ -1490,17 +1500,18 @@
                              <li>
                                 <a href="">
                                    <i class="uil uil-bell"></i> Help</a>
-                             </li>
-                          </ul>
-                          <a href="" class="nav-author__signout">
-                             <i class="uil uil-sign-out-alt"></i> Sign Out</a>
-                       </div>
+                             </li> -->
+                      </ul>
+                      <a href="/" class="nav-author__signout" id="signout">
+                        <i class="uil uil-sign-out-alt"></i> Sign Out</a
+                      >
                     </div>
-                    <!-- ends: .dropdown-wrapper -->
-                 </div>
+                  </div>
+                  <!-- ends: .dropdown-wrapper -->
+                </div>
               </div>
-           </li>
-           <!-- ends: .nav-author -->
+            </li>
+            <!-- ends: .nav-author -->
           </ul>
           <!-- ends: .navbar-right__menu -->
           <div class="navbar-right__mobileAction d-md-none">
@@ -1663,8 +1674,9 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
-                <!-- Card 1  -->
+              <!-- Card -->
+
+              <!-- <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
@@ -1687,11 +1699,9 @@
                     </div>
                   </div>
                 </div>
-                <!-- Card 1 End  -->
-              </div>
+              </div> -->
 
-              <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
-                <!-- Card 2 -->
+              <!-- <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
@@ -1714,11 +1724,9 @@
                     </div>
                   </div>
                 </div>
-                <!-- Card 2 End  -->
-              </div>
+              </div> -->
 
-              <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
-                <!-- Card 3 -->
+              <!-- <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
@@ -1741,10 +1749,9 @@
                     </div>
                   </div>
                 </div>
-                <!-- Card 3 End  -->
-              </div>
-              <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
-                <!-- Card 4  -->
+              </div> -->
+
+              <!-- <div class="col-xxl-3 col-sm-6 col-ssm-12 mb-25">
                 <div
                   class="ap-po-details ap-po-details--luodcy overview-card-shape radius-xl d-flex justify-content-between"
                 >
@@ -1767,8 +1774,11 @@
                     </div>
                   </div>
                 </div>
-                <!-- Card 4 End  -->
-              </div>
+
+              </div> -->
+              
+              <!-- Card End  -->
+
               <div class="card border-0 px-25">
                 <div class="card-header px-0 border-0">
                   <h6>Data Audit Prodi di Fakultas Anda Semua Siklus</h6>
