--- a/prodi/dashboard-prodi.html
+++ b/prodi/dashboard-prodi.html
@@ -1037,6 +1037,21 @@
         <!-- ends: navbar-left -->
         <div class="navbar-right">
           <ul class="navbar-right__menu">
+            <li class="nav-search">
+              <a href="#" class="search-toggle">
+                <i class="uil uil-search"></i>
+                <i class="uil uil-times"></i>
+              </a>
+              <form action="/" class="search-form-topMenu">
+                <span class="search-icon uil uil-search"></span>
+                <input
+                  class="form-control me-sm-2 box-shadow-none"
+                  type="search"
+                  placeholder="Search..."
+                  aria-label="Search"
+                />
+              </form>
+            </li>
             <li id="nav-author" class="nav-author">
               <div class="dropdown-custom">
                 <a href="javascript:;" class="nav-item-toggle"
@@ -1075,7 +1090,7 @@
                           >
                         </li>
                       </ul>
-                      <a href="" class="nav-author__signout">
+                      <a href="/" class="nav-author__signout" id="signout">
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
