--- a/auditors/dashboard-auditor.html
+++ b/auditors/dashboard-auditor.html
@@ -224,7 +224,7 @@
                           <a href=""> <i class="uil uil-bell"></i> Help</a>
                         </li>
                       </ul>
-                      <a href="/" class="nav-author__signout" id="signout">
+                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout" id="signout">
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
