update sign-out links to point to the login page

--- a/admins/dashboard-admins.html
+++ b/admins/dashboard-admins.html
@@ -371,7 +371,7 @@
                           >
                         </li>
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout" id="signout">
+                      <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout" id="signout">
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
