--- a/fakultas/dashboard-fakultas.html
+++ b/fakultas/dashboard-fakultas.html
@@ -1502,7 +1502,7 @@
                                    <i class="uil uil-bell"></i> Help</a>
                              </li> -->
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout" id="signout">
+                      <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout" id="signout">
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
