comment out form group for 'Standar' in ami.html

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -524,7 +524,7 @@
                                   </select>
                                 </div>
                               </div>
-                              <div class="form-group mb-20">
+                              <!-- <div class="form-group mb-20">
                                 <div class="category-member">
                                   <label> Standar :</label>
 
@@ -537,7 +537,7 @@
                                     </option>
                                   </select>
                                 </div>
-                              </div>
+                              </div> -->
 
                               <div class="button-group d-flex pt-25">
                                 <button
