Ref : rename table headers and adjust data display in standar.html and standar.js

--- a/ami/standar.html
+++ b/ami/standar.html
@@ -547,19 +547,19 @@
                               <thead>
                                  <tr class="userDatatable-header">
                                     <th>
-                                       <span class="userDatatable-title">Id</span>
+                                       <span class="userDatatable-title">No</span>
                                     </th>
                                     <th>
-                                       <span class="userDatatable-title">Standar</span>
+                                       <span class="userDatatable-title">Nama Standar</span>
                                     </th>
                                     <th>
-                                       <span class="userDatatable-title">Isi Indikator</span>
+                                       <span class="userDatatable-title">Pernyataan Standar</span>
                                     </th>
                                     <th>
-                                       <span class="userDatatable-title">Isi</span>
+                                       <span class="userDatatable-title">Indikator</span>
                                     </th>
                                     <th>
-                                       <span class="userDatatable-title">Prodi Unit</span>
+                                       <span class="userDatatable-title">Role</span>
                                     </th>
                                     <th>
                                        <span class="userDatatable-title">Periode</span>
