Ref : rename table header from 'nama indikator' to 'nama standar' in indikator.html

--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -457,7 +457,7 @@
                                           <span class="userDatatable-title">no</span>
                                        </th>
                                        <th>
-                                          <span class="userDatatable-title">nama indikator</span>
+                                          <span class="userDatatable-title">nama standar</span>
                                        </th>
                                        <th>
                                           <span class="userDatatable-title">isi indikator</span>
