fix some problems

--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -135,6 +135,7 @@
       .custom-button:hover {
         background-color: #663cff; /* Warna latar belakang saat hover */
       }
+
     </style>
   </head>
 
@@ -482,11 +483,11 @@
                             <th>
                               <span class="userDatatable-title">Standar</span>
                             </th>
-                            <th>
+                            <!-- <th>
                               <span class="userDatatable-title"
                                 >Butir Standar</span
                               >
-                            </th>
+                            </th> -->
                             <!-- <th>
                               <span class="userDatatable-title"
                                 >Nama Indikator</span
@@ -504,17 +505,17 @@
                             </th>
                             <th>
                               <span class="userDatatable-title"
-                                >Uraian Ketidak Sesuaian</span
+                                >Uraian KTS</span
                               >
                             </th>
                             <th>
                               <span class="userDatatable-title"
-                                >Rekomendasi Perbaikan</span
+                                >Perbaikan</span
                               >
                             </th>
                             <th>
                               <span class="userDatatable-title"
-                                >Target Waktu Perbaikan</span
+                                >Target Perbaikan</span
                               >
                             </th>
                             <!-- <th>
