fix redirect index and validation token

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 src="atis-assets/illustrations/creativedesign-amber.svg"
                 alt="image"/>
             </div>
-            <a href="app/auditor/dashboard-auditor.html">
+            <a href="https://euis.ulbi.ac.id/simpelbi/login.html">
               <button class="btn w-full border border-white bg-inherit text-white hover:bg-pink-700 masukButton"data-role="auditor">
                 Masuk
               </button>
@@ -83,7 +83,7 @@
                 alt="image"
               />
             </div>
-            <a href="app/fakultas/dashboard-fakultas.html">
+            <a href="https://euis.ulbi.ac.id/simpelbi/login.html">
               <button class="btn w-full border border-white bg-inherit text-white hover:bg-green-600 masukButton" data-role="fakultas">
                 Masuk
               </button>
@@ -103,7 +103,7 @@
                 alt="image"
               />
             </div>
-            <a href="app/prodi/dashboard-prodi.html">
+            <a href="https://euis.ulbi.ac.id/simpelbi/login.html">
               <button class="btn w-full border border-white bg-inherit text-white hover:bg-blue-600 masukButton"data-role="prodi">
                 Masuk
               </button>
@@ -123,7 +123,7 @@
                 alt="image"
               />
             </div>
-              <a href="dashboard.html">
+              <a href="https://euis.ulbi.ac.id/simpelbi/login.html">
                 <button class="btn w-full border border-white bg-inherit text-white hover:bg-indigo-600 masukButton"data-role="admin">
                   Masuk
                 </button>
