fix problems on note

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -533,8 +533,8 @@
 
                                   <input
                                     class="form-control ih-medium ip-gray radius-xs b-light"
-                                    id="tangalPelaksanaan"
-                                    type="date"
+                                    id="tanggalPelaksanaan"
+                                    type="datetime-local"
                                   />
                                 </div>
                               </div>
@@ -701,7 +701,7 @@
                                   <input
                                     class="form-control ih-medium ip-gray radius-xs b-light"
                                     id="tangalPelaksanaan"
-                                    type="date"
+                                    type="datetime-local"
                                   />
                                 </div>
                               </div>
