--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -494,6 +494,20 @@
                               <label
                                 for="inputNameIcon"
                                 class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
+                                >Link Perbaikan</label
+                              >
+                            </div>
+                            <div class="col-sm-9">
+                              <div class="with-icon">
+                                <a href="" id="linkPerbaikan" style="font-size: 12px; padding: 6px 12px; border: 1px solid;">Kunjungi Link Perbaikan</a>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="form-group row mb-25">
+                            <div class="col-sm-3 d-flex aling-items-center">
+                              <label
+                                for="inputNameIcon"
+                                class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
                                 >Jawaban Indikator</label
                               >
                             </div>
