--- a/prodi/documents/document.html
+++ b/prodi/documents/document.html
@@ -8,7 +8,7 @@
   <body>
     <div class="document-print">
       <div class="document-print-left">
-        <img src="/prodi/documents/logo.png" alt="Logo ULBI" />
+        <img src="./documents/logo.png" alt="Logo ULBI" />
         <div class="box">
           <h2>Bagian Penjaminan Mutu Internal</h2>
           <h3>Universitas Logistik & Bisnis Internasional</h3>
