--- a/prodi/selfassignment.html
+++ b/prodi/selfassignment.html
@@ -767,6 +767,7 @@
     <div class="overlay-dark-sidebar"></div>
     <div class="customizer-overlay"></div>
     <!-- inject:js-->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-3.5.1.min.js"></script>
     <script src="../assets/vendor_assets/js/jquery/jquery-ui.js"></script>
     <script src="../assets/vendor_assets/js/bootstrap/popper.js"></script>
