--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -232,7 +232,10 @@
                           <a href=""> <i class="uil uil-bell"></i> Help</a>
                         </li>
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout">
+                      <a
+                        href="https://euis.ulbi.ac.id/simpelbi/login.html"
+                        class="nav-author__signout"
+                      >
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
@@ -494,12 +497,21 @@
                               <label
                                 for="inputNameIcon"
                                 class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
-                                >Link Perbaikan</label
+                                >Kelengkapan Dokumen Indikator</label
                               >
                             </div>
                             <div class="col-sm-9">
                               <div class="with-icon">
-                                <a href="" id="linkPerbaikan" style="font-size: 12px; padding: 6px 12px; border: 1px solid;">Kunjungi Link Perbaikan</a>
+                                <a
+                                  href=""
+                                  id="linkPerbaikan"
+                                  style="
+                                    font-size: 12px;
+                                    padding: 6px 12px;
+                                    border: 1px solid;
+                                  "
+                                  >Kunjungi Link Dokumen Indikator</a
+                                >
                               </div>
                             </div>
                           </div>
