fix redirect logout and fix something problems again

--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -233,7 +233,7 @@
                         </li>
                       </ul>
                       <a
-                        href="https://euis.ulbi.ac.id/simpelbi/login.html"
+                        href="https://euis.ulbi.ac.id/simpelbi/"
                         class="nav-author__signout"
                       >
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
