--- a/auditors/audit_lanjut_pelaksanaan.html
+++ b/auditors/audit_lanjut_pelaksanaan.html
@@ -442,7 +442,7 @@
                                        <i class="uil uil-bell"></i> Help</a>
                                  </li>
                               </ul>
-                              <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout">
+                              <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout">
                                  <i class="uil uil-sign-out-alt"></i> Sign Out</a>
                            </div>
                         </div>
