--- a/prodi/update-status.html
+++ b/prodi/update-status.html
@@ -1042,7 +1042,7 @@
                           >
                         </li>
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout">
+                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout">
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
