--- a/settingsmenu/kepuasanmitra.html
+++ b/settingsmenu/kepuasanmitra.html
@@ -125,7 +125,7 @@
                                        <i class="uil uil-user"></i> Profile</a>
                                  </li>
                               </ul>
-                              <a href="https://euis.ulbi.ac.id/simpelbi/login.html" class="nav-author__signout">
+                              <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout">
                                  <i class="uil uil-sign-out-alt"></i> Sign Out</a>
                            </div>
                         </div>
