--- a/ami/standar.html
+++ b/ami/standar.html
@@ -344,14 +344,14 @@
 
          <div class="container-fluid">
             <div class="row">
-               <div class="col-lg-12 mb-30">
-                  <div class="breadcrumb-main user-member justify-content-sm-between ">
+               <!-- <div class="col-lg-12 mb-30"> -->
+                  <!-- <div class="breadcrumb-main user-member justify-content-sm-between ">
                      <div class="action-btn">
                         <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
-                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a>
+                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a> -->
                         <!-- Modal -->
                         <!-- Modal ADD -->
-                        <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1"
+                        <!-- <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1"
                            aria-labelledby="staticBackdropLabel" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
@@ -369,10 +369,10 @@
                                              <input type="text" class="form-control" placeholder="Nama Standar"
                                                 id="judulStandar">
                                           </div>
-                                          <!-- <div class="form-group mb-20">
+                                          <div class="form-group mb-20">
                                              <label for="indikator">Isi Indikator :</label>
                                              <select class="form-control" id="indikator"></select>
-                                         </div> -->
+                                         </div>
                                          
                                           <div class="form-group mb-20">
                                              <label>Pernyataan Standar:</label>
@@ -426,12 +426,12 @@
                                  </div>
                               </div>
                            </div>
-                        </div>
+                        </div> -->
                         <!-- Modal UPDATE -->
 
                         <!-- Modal -->
-                     </div>
-                     <div class="modal fade new-member " id="new-member-update" role="dialog" tabindex="-1"
+                     <!-- </div> -->
+                     <!-- <div class="modal fade new-member " id="new-member-update" role="dialog" tabindex="-1"
                         aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered">
                            <div class="modal-content  radius-xl">
@@ -504,11 +504,11 @@
                               </div>
                            </div>
                         </div>
-                     </div>
+                     </div> -->
                      <!-- Modal UPDATE -->
 
                      <!-- Modal -->
-                  </div>
+                  <!-- </div> -->
                </div>
                <div class="card mt-30">
                   <div class="card-body">
