refactor: clean up HTML comments and improve data display in JavaScript

--- a/ami/indikator.html
+++ b/ami/indikator.html
@@ -335,12 +335,12 @@
          <div class="container-fluid">
             <div class="row">
                <div class="col-lg-12 mb-30">
-                  <div class="breadcrumb-main user-member justify-content-sm-between ">
+                  <!-- <div class="breadcrumb-main user-member justify-content-sm-between ">
                      <div class="action-btn">
                         <a href="#" class="btn px-15 btn-primary" data-bs-toggle="modal" data-bs-target="#new-member">
-                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a>
+                           <i class="las la-plus fs-16"></i>Tambah Data Baru</a> -->
                         <!-- Modal -->
-                        <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" aria-hidden="true">
+                        <!-- <div class="modal fade new-member " id="new-member" role="dialog" tabindex="-1" aria-labelledby="staticBackdropLabel" data-bs-backdrop="static" aria-hidden="true">
                            <div class="modal-dialog modal-dialog-centered">
                               <div class="modal-content  radius-xl">
                                  <div class="modal-header">
@@ -415,11 +415,11 @@
                                  </div>
                               </div>
                            </div>
-                        </div>
+                        </div> -->
                         
                         <!-- Modal -->
-                     </div>
-                  </div>
+                     <!-- </div>
+                  </div> -->
                   <div class="card mt-30">
                      <div class="card-body">
                         <div class="col-lg-6 mb-3">
