add status sudah diperbaiki, add field uraian and perbaikan

--- a/ami/ami.html
+++ b/ami/ami.html
@@ -529,7 +529,7 @@
                               </div>
                               <div class="form-group mb-20">
                                 <div class="category-member">
-                                  <label>Tanggal Pelaksanaan  :</label>
+                                  <label>Tanggal Pelaksanaan :</label>
 
                                   <input
                                     class="form-control ih-medium ip-gray radius-xs b-light"
@@ -694,13 +694,14 @@
                                   </select>
                                 </div>
                               </div>
+
                               <div class="form-group mb-20">
                                 <div class="category-member">
                                   <label>Tanggal Pelaksanaan :</label>
 
                                   <input
                                     class="form-control ih-medium ip-gray radius-xs b-light"
-                                    id="tangalPelaksanaan"
+                                    id="tanggalPelaksanaan-update"
                                     type="datetime-local"
                                   />
                                 </div>
@@ -833,7 +834,9 @@
                               <span class="userDatatable-title">Status</span>
                             </th>
                             <th>
-                              <span class="userDatatable-title">Tanggal Pelaksanaan</span>
+                              <span class="userDatatable-title"
+                                >Tanggal Pelaksanaan</span
+                              >
                             </th>
                             <th>
                               <span class="userDatatable-title"
