--- a/auditors/pengawasan-audit-detail.html
+++ b/auditors/pengawasan-audit-detail.html
@@ -130,13 +130,10 @@
         font-size: 12px;
       }
 
-      .success-button:hover {
-        background-color: #663cff;
-        /* Warna latar belakang saat hover */
-      }
-
+      .success-button:hover,
       .custom-button:hover {
         background-color: #663cff;
+        color: #fff;
         /* Warna latar belakang saat hover */
       }
     </style>
@@ -632,6 +629,9 @@
                                   <option value="Open">Open</option>
                                   <option value="Ada Perbaikan">
                                     Ada Perbaikan
+                                  </option>
+                                  <option value="Sudah Diperbaiki">
+                                    Sudah Diperbaiki
                                   </option>
                                 </select>
                               </div>
