--- a/auditors/pengawasan-audit.html
+++ b/auditors/pengawasan-audit.html
@@ -128,13 +128,25 @@
         cursor: pointer;
         font-size: 12px;
       }
-      .success-button:hover {
+      .done-button {
+        background-color: #6c757d; /* Warna latar belakang */
+        color: #fff; /* Warna teks */
+        padding: 5px 15px; /* Ukuran padding */
+        border: none; /* Tanpa border */
+        border-radius: 15px; /* Sudut bulat */
+        cursor: pointer;
+        font-size: 12px;
+      }
+      
+      .success-button:hover,
+      .custom-button:hover,
+      .fix-button:hover,
+      .done-button:hover 
+      {
         background-color: #663cff; /* Warna latar belakang saat hover */
+        color: #fff;
       }
 
-      .custom-button:hover {
-        background-color: #663cff; /* Warna latar belakang saat hover */
-      }
 
     </style>
   </head>
