--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -241,7 +241,10 @@
                           <a href=""> <i class="uil uil-bell"></i> Help</a>
                         </li>
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout">
+                      <a
+                        href="https://euis.ulbi.ac.id/simpelbi/"
+                        class="nav-author__signout"
+                      >
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
@@ -498,6 +501,47 @@
                               </div>
                             </div>
                           </div>
+                          <div class="form-group row mb-25 form-group-to-hide">
+                            <div class="col-sm-3 d-flex aling-items-center">
+                              <label
+                                for="inputNameIcon"
+                                class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
+                                >Uraian Ketidaksesuaian
+                              </label>
+                            </div>
+                            <div class="col-sm-9">
+                              <div class="with-icon">
+                                <textarea
+                                  name="uraian"
+                                  class="form-control ih-medium ip-gray radius-xs b-light"
+                                  id="uraian"
+                                  style="width: 100%; height: 120px"
+                                  readonly
+                                ></textarea>
+                              </div>
+                            </div>
+                          </div>
+
+                          <div class="form-group row mb-25 form-group-to-hide">
+                            <div class="col-sm-3 d-flex aling-items-center">
+                              <label
+                                for="inputNameIcon"
+                                class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
+                                >Tindak Perbaikan
+                              </label>
+                            </div>
+                            <div class="col-sm-9">
+                              <div class="with-icon">
+                                <textarea
+                                  name="uraian"
+                                  class="form-control ih-medium ip-gray radius-xs b-light"
+                                  id="tindakPerbaikan"
+                                  style="width: 100%; height: 120px"
+                                  readonly
+                                ></textarea>
+                              </div>
+                            </div>
+                          </div>
                           <div class="form-group row mb-25">
                             <div class="col-sm-3 d-flex aling-items-center">
                               <label
@@ -540,47 +584,7 @@
                             </div>
                           </div>
 
-                          <!--<div class="form-group row mb-25 form-group-to-hide">
-                            <div class="col-sm-3 d-flex aling-items-center">
-                              <label
-                                for="inputNameIcon"
-                                class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
-                                >Uraian Ketidaksesuaian:
-                              </label>
-                            </div>
-                            <div class="col-sm-9">
-                              <div class="with-icon">
-                                <textarea
-                                  name="uraian"
-                                  class="form-control ih-medium ip-gray radius-xs b-light"
-                                  id="uraian"
-                                  style="width: 100%; height: 200px"
-                                ></textarea>
-                              </div>
-                            </div>
-                          </div>
-
-                          <div class="form-group row mb-25 form-group-to-hide">
-                            <div class="col-sm-3 d-flex aling-items-center">
-                              <label
-                                for="inputNameIcon"
-                                class="col-form-label color-dark fs-14 fw-500 align-center mb-10"
-                                >Tindak Perbaikan (Boleh diisi nanti):
-                              </label>
-                            </div>
-                            <div class="col-sm-9">
-                              <div class="with-icon">
-                                <textarea
-                                  name="uraian"
-                                  class="form-control ih-medium ip-gray radius-xs b-light"
-                                  id="tindakPerbaikan"
-                                  style="width: 100%; height: 200px"
-                                ></textarea>
-                              </div>
-                            </div>
-                          </div>
-
-                          <div class="form-group row mb-25 form-group-to-hide">
+                          <!--  <div class="form-group row mb-25 form-group-to-hide">
                             <div class="col-sm-3 d-flex aling-items-center">
                               <label
                                 for="inputNameIcon"
