add button back on auditor and prodi

--- a/prodi/pengawasan-audit-detail.html
+++ b/prodi/pengawasan-audit-detail.html
@@ -629,18 +629,23 @@
                               </div>
                             </div>
                           </div> -->
-                          <button
-                            type="button"
-                            id="buttoninsert"
-                            style="
-                              margin-right: 20px;
-                              margin-top: 12px;
-                              margin-bottom: 12px;
-                            "
-                            class="btn btn-default btn-squared color-primary btn-outline-primary"
-                          >
-                            Simpan Data
-                          </button>
+                          <div class="d-flex">
+                            <button
+                              type="button"
+                              id="buttoninsert"
+                              style="margin-right: 20px; margin-top: 12px"
+                              class="btn btn-default btn-squared color-primary btn-outline-primary"
+                            >
+                              Simpan Data
+                            </button>
+                            <button
+                              type="button"
+                              class="btn btn-light btn-default btn-squared fw-400 text-capitalize b-light color-light"
+                              id="buttonBack"
+                            >
+                              Kembali
+                            </button>
+                          </div>
                         </form>
                       </div>
                     </div>
