--- a/prodi/pengawasan-audit.html
+++ b/prodi/pengawasan-audit.html
@@ -131,12 +131,22 @@
         cursor: pointer;
         font-size: 12px;
       }
-      .success-button:hover {
-        background-color: #663cff; /* Warna latar belakang saat hover */
+      .done-button {
+        background-color: #6c757d; /* Warna latar belakang */
+        color: #fff; /* Warna teks */
+        padding: 5px 15px; /* Ukuran padding */
+        border: none; /* Tanpa border */
+        border-radius: 15px; /* Sudut bulat */
+        cursor: pointer;
+        font-size: 12px;
       }
 
-      .custom-button:hover {
+      .success-button:hover,
+      .custom-button:hover,
+      .fix-button:hover,
+      .done-button:hover {
         background-color: #663cff; /* Warna latar belakang saat hover */
+        color: #fff;
       }
     </style>
   </head>
@@ -231,7 +241,10 @@
                           <a href=""> <i class="uil uil-bell"></i> Help</a>
                         </li>
                       </ul>
-                      <a href="https://euis.ulbi.ac.id/simpelbi/" class="nav-author__signout">
+                      <a
+                        href="https://euis.ulbi.ac.id/simpelbi/"
+                        class="nav-author__signout"
+                      >
                         <i class="uil uil-sign-out-alt"></i> Sign Out</a
                       >
                     </div>
